# daa-issuer-jni

jni-lib/: build.gradle
jni-lib/src/main/cpp/: CMakeLists.txt  bridge_tpm.c  bridge_tpm.h  cmake_install.cmake  daa_bridge.c  daa_bridge.h  defines.h  demo.c  hash.c  hash.h  native-lib.cpp  objecttemplates.c  objecttemplates.h  persistence.c  persistence.h  policy.c  policy.h  templates.c  templates.h
jni-lib/src/main/cpp/Test_issuer/: issuer_interface.c  issuer_interface.h
jni-lib/src/main/cpp/daa/: BN_Crypto.c  BN_Crypto.h  daa_client_base.c  daa_client_base.h  daa_issuer.c  daa_issuer.h  daa_pairings.c  daa_pairings.h  defines.h  issPk.c  issPk.h
jni-lib/src/main/java/jni/: DAAInterface.java  LibraryLoader.java
jni-runner/src/main/java/jni/: Runner.java
